--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -150,6 +150,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/hint_name"
                         android:inputType="textPersonName"
+                        android:textColor="@android:color/black"
                         android:maxLines="1" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -178,6 +179,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/hint_email"
                         android:inputType="textEmailAddress"
+                        android:textColor="@android:color/black"
                         android:maxLines="1" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
@@ -240,6 +242,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/hint_sender_email"
                         android:inputType="textEmailAddress"
+                        android:textColor="@android:color/black"
                         android:maxLines="1" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -269,6 +272,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/hint_app_password"
                         android:inputType="textPassword"
+                        android:textColor="@android:color/black"
                         android:maxLines="1" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
